fixed record cache, but stuck in re-render loop

--- a/assets/sass/partials/_layout.scss
+++ b/assets/sass/partials/_layout.scss
@@ -172,6 +172,7 @@
   $message-box-padding: 5px;
   width: $message-box-width;
   padding: $message-box-padding;
+  z-index: 1;
   color: white;
   .header {
     display: table;
